--- a/apps/game-server/src/style/style.scss
+++ b/apps/game-server/src/style/style.scss
@@ -7,3 +7,18 @@
         @extend .w3-hover-white;
     }
 }
+
+.fps-hud{
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+}
+
+.crosshair {
+    position: absolute;
+    //top: 50%;
+    //left: 50%;
+    //transform: translate(-50%, -50%);
+    //width: 50px;
+    //height: 50px;
+}
